--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -34,6 +34,10 @@ nav {
     color: inherit;
     text-decoration: none;
 }
+
+.nav-heading a:hover {
+    color: var(--theme-color-active);
+}
   
 .nav-pages {
     display: flex;
