--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -1,38 +1,123 @@
-@font-face {font-family: 'Source-Code-Pro';src: url('../downloads/Source_Code_Pro/SourceCodePro-VariableFont_wght.ttf');}
+@font-face {font-family: 'Source-Code-Pro'; src: url('../downloads/Source_Code_Pro/SourceCodePro-VariableFont_wght.ttf');}
+
+@keyframes fade-in {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
 
 :root {
-    --theme-color-active: #666666;
+    --theme-color-active: #222222;
     --theme-color-hover: #BBBBBB;
     --theme-color-words: #111111;
     --theme-color-active-words: #EEEEEE;
+    --theme-color-owhite: #f9f7f5;
 }
 
 * {
     margin: 0px;
     padding: 0px;
+    
     box-sizing: border-box;
     font-family: Source-Code-Pro, sans-serif !important;
 }
 
+body {
+    position: absolute;
+    top: 10em;
+
+    color: var(--theme-color-main);
+    background-color: var(--theme-color-owhite);
+
+    width: 100%;
+}
+
+.button {
+    display: inline-block;
+
+    color: var(--theme-color-active-words);
+    background-color: var(--theme-color-words);
+
+    text-decoration: none;
+    font-size: 16px;
+    text-align: center;
+    letter-spacing: 1px;
+
+    padding: 14px 16px 14px 17px;
+    border-radius: 5px;
+    
+    cursor: pointer;
+}
+
+.home-flex {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+
+    width: 100%;
+}
+
+.home-item {
+    display: inline-block;
+    flex-basis: 50%;
+    
+    width: 100%;
+}
+
+.home-content {
+    margin-left: auto;
+    margin-right: 50px;
+    padding-left: 20px;
+
+    max-width: 380px;
+}
+
+.home-content h2 {
+    font-size: 32px;
+}
+
+.home-content p {
+    margin-top: 17.5px;
+    margin-bottom: 25px;
+}
+
+.home-item img {
+    display: block;
+
+    margin-right: auto;
+    margin-left: 50px;
+    padding-right: 20px;
+
+    animation-name: fade-in;
+    animation-duration: 1.5s;
+}
+
+
 /* sticky navigation? */
 nav {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    min-height: 5em;
-    color: var(--theme-color-words);
     position: fixed;
     top: 0;
+
+    color: var(--theme-color-words);
+    background-color: var(--theme-color-owhite);
+
+    justify-content: space-around;
+    align-items: center;
+
+    padding-top: 1.5em;
+    padding-bottom: 1.5em;
+
     width: 100%;
 }
 
 .nav-heading {
-    letter-spacing: 6px;
     font-size: 16px;
+    letter-spacing: 6px;
 }
 
 .nav-heading a {
     color: inherit;
+
     text-decoration: none;
 }
 
@@ -43,6 +128,7 @@ nav {
 .nav-pages {
     display: flex;
     justify-content: space-around;
+
     width: 35%;
 }
 
@@ -53,20 +139,67 @@ nav {
 
 .nav-pages a {
     color: inherit;
+
     text-decoration: none;
-    letter-spacing: 4px;
     font-size: 16px;
-    padding: 14px 16px;
-    padding-left: 20px;
+    letter-spacing: 4px;
+
+    padding: 14px 16px 14px 20px;
 }
 
 .nav-pages a:hover {
-    border-radius: 5px;
     background-color: var(--theme-color-hover);
+
+    border-radius: 5px;
 }
 
 .nav-pages a.active {
-    border-radius: 5px;
-    background-color: var(--theme-color-active);
     color: var(--theme-color-active-words);
+    background-color: var(--theme-color-active);
+
+    border-radius: 5px;
 }
+
+@media (max-width: 825px) {
+    .home-content {
+        margin-right: 30px;
+        max-width: 475px;
+    }
+
+    .home-item img {
+        margin-left: 30px;
+    }
+}
+
+@media (max-width: 775px) {
+    nav {
+        padding-top: 1.5em;
+        flex-direction: column;
+    }
+
+    .nav-pages {
+        padding-top: 1em;
+    }
+
+    .home-content {
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 30px;
+        padding-right: 30px;
+
+        max-width: 600px;
+    }
+
+    .home-item {
+        flex-basis: auto;
+
+        width: auto;
+    }
+
+    .home-item img {
+        display: none;
+
+        flex-basis: 0;
+    }
+}
+
