--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -6,11 +6,12 @@
 }
 
 :root {
-    --theme-color-active: #222222;
-    --theme-color-hover: #BBBBBB;
-    --theme-color-words: #111111;
+    --theme-color-background: #F9F7F5;
     --theme-color-active-words: #EEEEEE;
-    --theme-color-owhite: #f9f7f5;
+    --theme-color-languages: #D0D0D0;
+    --theme-color-hover: #BBBBBB;
+    --theme-color-active: #333333;
+    --theme-color-main: #111111;
 }
 
 * {
@@ -26,7 +27,7 @@ body {
     top: 10em;
 
     color: var(--theme-color-main);
-    background-color: var(--theme-color-owhite);
+    background-color: var(--theme-color-background);
 
     width: 100%;
 }
@@ -35,7 +36,7 @@ body {
     display: inline-block;
 
     color: var(--theme-color-active-words);
-    background-color: var(--theme-color-words);
+    background-color: var(--theme-color-main);
 
     text-decoration: none;
     font-size: 16px;
@@ -48,6 +49,15 @@ body {
     cursor: pointer;
 }
 
+.button:hover {
+    background-color: var(--theme-color-hover);
+    color: var(--theme-color-main);
+
+    border-radius: 5px;
+}
+
+
+/* home */
 .home-flex {
     display: flex;
     justify-content: center;
@@ -80,11 +90,141 @@ body {
     margin-bottom: 25px;
 }
 
-.content-img {
-    display: none;
+.home-item img {
+    display: block;
+
+    margin-right: auto;
+    margin-left: 70px;
+    padding-right: 20px;
+
+    animation-name: fade-in;
+    animation-duration: 1.5s;
 }
 
-.home-item img {
+
+/* portfolio */
+.portfolio-flex {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    /* align-items: ; */
+}
+
+.portfolio-item {
+    width: 40%;
+    padding: 20px;
+    margin-bottom: 50px;
+
+    border-radius: 20px;
+    background-color: var(--theme-color-active-words);
+    box-shadow: 0 4px 8px 0 var(--theme-color-languages), 0 6px 20px 0 var(--theme-color-languages);
+}
+
+.right {
+    margin-right: 2%;
+    margin-left: 1.5%;
+}
+
+.left {
+    margin-right: 1.5%;
+    margin-left: 2%;
+}
+
+.portfolio-header {
+    margin-bottom: 15px;
+    font-size: 30px;
+}
+
+.portfolio-img {
+    max-width: 100%;
+}
+
+hr {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.portfolio-languages {
+    margin-top: 10px;
+}
+
+.portfolio-languages > p {
+    background-color: var(--theme-color-languages);
+    border-radius: 10px;
+    padding: 2px 8px;
+    margin: 10px 2px 10px 0px;
+    display: inline-block;
+    font-size: 14px;
+}
+
+.portfolio-desc {
+    margin-bottom: 20px;
+}
+
+.portfolio-desc > h3 {
+    margin: 10px 0;
+}
+
+.portfolio-stats {
+    border-radius: 10px;
+    box-shadow: 0 0 5px 3px var(--theme-color-languages);
+    margin-bottom: 20px;
+    padding: 10px;
+}
+
+.portfolio-stats > div > h3 {
+    margin: 10px 0;
+    font-size: 16px;
+    display: inline-block;
+
+}
+
+.portfolio-stats > div > p {
+    font-size: 15px;
+    display: inline-block;
+
+}
+
+
+/* resume */
+
+
+
+
+/* about */
+.about-flex {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+
+    width: 100%;
+}
+
+.about-item {
+    display: inline-block;
+    flex-basis: 50%;
+    
+    width: 100%;
+}
+
+.about-content {
+    margin-left: auto;
+    margin-right: 50px;
+    padding-left: 20px;
+
+    max-width: 380px;
+}
+
+.about-content h2 {
+    font-size: 36px;
+}
+
+.about-content p {
+    margin-top: 17.5px;
+    margin-bottom: 25px;
+}
+
+.about-item img {
     display: block;
 
     margin-right: auto;
@@ -103,7 +243,7 @@ nav {
     top: 0;
 
     color: var(--theme-color-words);
-    background-color: var(--theme-color-owhite);
+    background-color: var(--theme-color-background);
 
     justify-content: space-around;
     align-items: center;
@@ -208,5 +348,10 @@ nav {
         padding-bottom: 50px;
         width: 200px;
     }
+
+    .portfolio-item {
+        width: 70%;
+    }
+
 }
 
