--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -32,10 +32,6 @@ body {
     width: 100%;
 }
 
-h2 {
-    font-size: 22px;
-}
-
 .button {
     display: inline-block;
 
@@ -135,7 +131,7 @@ h2 {
 
 .portfolio-header {
     margin-bottom: 15px;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 .portfolio-img {
@@ -234,6 +230,7 @@ hr {
 }
 
 .resume-header {
+    font-size: 22px;
     text-align: center;
     width: 100%;
     padding-bottom: 35px;
@@ -243,7 +240,6 @@ hr {
     border-left: 2px solid #333;
     margin: auto;
     width: 60%;
-
 }
 
 .resume-card {
@@ -455,10 +451,22 @@ nav {
     .resume-item {
         width: 40%;
     }
+
+    .resume-line {
+        width: 70%;
+    }
 }
 
 @media (max-width: 590px) {
+    .portfolio-item {
+        width: 90%;
+    }
+
     .resume-item {
         width: 70%;
+    }
+
+    .resume-line {
+        width: 90%;
     }
 }
