--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -35,6 +35,8 @@ body {
 .button {
     display: inline-block;
 
+    padding: 14px 16px 14px 17px;
+
     color: var(--theme-color-active-words);
     background-color: var(--theme-color-active);
 
@@ -43,7 +45,6 @@ body {
     text-align: center;
     letter-spacing: 1px;
 
-    padding: 14px 16px 14px 17px;
     border-radius: 5px;
     
     cursor: pointer;
@@ -139,7 +140,7 @@ body {
     padding-top: 30px;
     padding-bottom: 30px;
 
-    font-size: 22px;
+    font-size: 28px;
     text-align: center;
 
     width: 100%;
@@ -148,7 +149,7 @@ body {
 .portfolio-proj-header {
     margin-bottom: 15px;
 
-    font-size: 25px;
+    font-size: 22px;
 }
 
 .portfolio-img {
@@ -225,9 +226,9 @@ hr {
 
 .resume-header {
     padding-top: 30px;
-    padding-bottom: 15px;
+    margin-bottom: 15px;
 
-    font-size: 22px;
+    font-size: 28px;
     text-align: center;
 
     width: 100%;
@@ -263,7 +264,7 @@ hr {
 
 .resume-title {
     position: relative;
-    font-size: 20px;
+    font-size: 22px;
 
     z-index: 1;
 }
@@ -296,10 +297,12 @@ hr {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+
+    padding-top: 15px;
 }
 
 .resume-item {
-    margin: 0 2% 2.5% 2%;
+    margin: 0 1% 2.5% 1%;
     padding: 15px;
 
     background-color: var(--theme-color-active-words);
